--- a/.github/workflows/build-and-release.yaml
+++ b/.github/workflows/build-and-release.yaml
@@ -32,6 +32,7 @@ jobs:
       uses: diddlesnaps/snapcraft-multiarch-action@v1
       with:
         architecture: ${{ matrix.architecture }}
+        snapcraft-args: --enable-experimental-package-repositories
     - name: Review
       uses: diddlesnaps/snapcraft-review-tools-action@v1
       with:
