Attempt native arm64 builds
Signed-off-by: Daniel Llewellyn <diddledan@ubuntu.com>

--- a/.github/workflows/build-prs.yml
+++ b/.github/workflows/build-prs.yml
@@ -12,6 +12,8 @@ jobs:
         - amd64
         - i386
         - armhf
+        - arm64
+        - ppc64el
         playtest:
         - 'true'
         - 'false'
