--- a/.github/workflows/build-and-release.yaml
+++ b/.github/workflows/build-and-release.yaml
@@ -15,6 +15,8 @@ jobs:
         - amd64
         - i386
         - armhf
+        - arm64
+        - ppc64el
         playtest:
         - true
         - false
