--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -14,7 +14,7 @@ architectures:
 - build-on: amd64
 - build-on: i386
 - build-on: armhf
-  run-on: [armhf, arm64]
+- build-on: arm64
 - build-on: ppc64el
 
 layout:
