--- a/.github/workflows/build-prs.yml
+++ b/.github/workflows/build-prs.yml
@@ -7,6 +7,7 @@ jobs:
   snapcraft-build:
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
         architecture:
         - amd64
