Try to ensure podman is used for self-hosted runner
Signed-off-by: Dani Llewellyn <diddledani@ubuntu.com>

--- a/.github/workflows/build-prs.yml
+++ b/.github/workflows/build-prs.yml
@@ -31,6 +31,7 @@ jobs:
       uses: diddlesnaps/snapcraft-multiarch-action@v1
       with:
         architecture: ${{ matrix.architecture.arch }}
+        use-podman: ${{ contains(matrix.architecture.runner, 'self-hosted') }}
     - name: Review
       uses: diddlesnaps/snapcraft-review-tools-action@v1
       with:
