--- a/.github/workflows/build-prs.yml
+++ b/.github/workflows/build-prs.yml
@@ -19,6 +19,7 @@ jobs:
         playtest:
         - 'true'
         - 'false'
+    allow-failure: ${{ contains(matrix.architecture.arch, 'arm') }}
     steps:
     - name: Checkout
       uses: actions/checkout@v3
