--- a/.github/workflows/build-and-release.yaml
+++ b/.github/workflows/build-and-release.yaml
@@ -31,7 +31,7 @@ jobs:
         use-podman: ${{ contains(matrix.architecture.runner, 'self-hosted') }}
     - name: Massage the snap name
       id: snap-name
-      run: echo "snap=$(echo ${{ steps.build.outputs.snap }} | sed -Ee 's@^'"${{ GITHUB_WORKSPACE }}"'/?@@')" >> "$GITHUB_OUTPUT"
+      run: echo "snap=$(echo ${{ steps.build.outputs.snap }} | sed -Ee 's@^'"${GITHUB_WORKSPACE}"'/?@@')" >> "$GITHUB_OUTPUT"
     - name: Publish release to Beta
       id: release
       uses: diddlesnaps/snapcraft-multiarch-action@v1
@@ -66,7 +66,7 @@ jobs:
         use-podman: ${{ contains(matrix.architecture.runner, 'self-hosted') }}
     - name: Massage the snap name
       id: snap-name
-      run: echo "snap=$(echo ${{ steps.build.outputs.snap }} | sed -Ee 's@^'"${{ GITHUB_WORKSPACE }}"'/?@@')" >> "$GITHUB_OUTPUT"
+      run: echo "snap=$(echo ${{ steps.build.outputs.snap }} | sed -Ee 's@^'"${GITHUB_WORKSPACE}"'/?@@')" >> "$GITHUB_OUTPUT"
     - name: Publish release to Edge
       id: release
       uses: diddlesnaps/snapcraft-multiarch-action@v1
