Ensure the TS mod works with the changes from #25
Signed-off-by: Lucy Llewellyn <lucyllewy@ubuntu.com>

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -76,9 +76,9 @@ apps:
 
   # experimental
   ts:
+    extensions: [gnome]
     command: usr/bin/openra-ts
     common-id: openra-ts.desktop
-    # desktop: usr/share/applications/openra-ts.desktop
     plugs:
     - audio-playback
     - avahi-control
@@ -164,6 +164,7 @@ parts:
     - unzip
     stage-packages:
     - libfreetype6
+    - libicu70
     - liblttng-ust1
     - liblua5.1-0
     - libopenal1
