--- a/.github/workflows/build-prs.yml
+++ b/.github/workflows/build-prs.yml
@@ -11,19 +11,17 @@ jobs:
       matrix:
         architecture:
         - arch: amd64
-          runner: ubuntu-latest
+          runner: ubuntu-24.04
         - arch: armhf
-          runner: [self-hosted, linux, ARM64]
+          runner: ubuntu-24.04-arm
         - arch: arm64
-          runner: [self-hosted, linux, ARM64]
+          runner: ubuntu-24.04-arm
         playtest:
         - 'true'
         - 'false'
     steps:
     - name: Checkout
       uses: actions/checkout@v3
-    - name: Set up QEMU
-      uses: docker/setup-qemu-action@v2
     - name: Set playtest=${{ matrix.playtest }}
       run: echo 'PLAYTEST=${{ matrix.playtest }}' > build-type
     - name: Build
